# fingerprint_diabetes

./: README.md  SETUP_STATUS.md  db.sqlite3  main.py  pyproject.toml
dataset/: Fingerprint_Based_Diabetes_Prediction_Clean_Balanced.csv
diabetes_prediction/: settings.py  urls.py
fingerprint_pred/: admin.py  apps.py  fingerprint_utils.py  forms.py  ml_model.py  models.py  urls.py  views.py
fingerprint_pred/migrations/: 0001_initial.py
templates/: base.html
templates/fingerprint_pred/: about.html  bmi_calculator.html  dashboard.html  home.html  result.html  upload.html
templates/registration/: login.html  register.html
